<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName" translatable="false">Wallet Plus</string>

    <!-- Common strings -->
    <string name="create">Create</string>
    <string name="download">Download</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="income">Income</string>
    <string name="expanse">Expanse</string>
    <string name="transfer">Transfer</string>
    <string name="divider">Divider</string>
    <string name="groupIndicator">Group indicator</string>
    <string name="removeCategory">Remove category</string>

    <!-- Navigation drawer -->
    <string name="dashboardMenu">Dashboard</string>
    <string name="cashflowMenu">Cash flow</string>
    <string name="walletMenu">Wallets</string>
    <string name="newAccount">New account</string>
    <string name="accountLinkWithGoogle">Link with Google</string>

    <!-- Dashboard fragment -->
    <string name="totalAmountLabel">Total:</string>

    <!-- Category list fragment -->
    <string name="categoryListLabel">Categories</string>
    <string name="categoryNoCategoryName">No category</string>
    <string name="categoryNoCategoryClicked">This category disappears after setting category to every cashflows.</string>

    <!-- Category details fragment -->
    <string name="categoryDetailsLabel">Category</string>
    <string name="categoryNameLabel">Name:</string>
    <string name="categoryNameHint">name</string>
    <string name="categoryParentLabel">Parent:</string>
    <string name="categoryDeleteConfirmation">Do you want to delete this category?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
    <string name="categoryCantDeleteCategoryWithSubs">Cannot delete category with subcategories.\nDelete subcategories first.</string>
    <string name="categoryMustHaveName">Category must have name.</string>
    <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
    <string name="categoryNoParentSelected">No parent (main category)</string>

    <!-- Wallet list fragment -->
    <string name="walletListLabel">Wallets</string>

    <!-- Wallet details fragment -->
    <string name="walletNameLabel">Name</string>
    <string name="walletInitialAmountLabel">Initial amount</string>
    <string name="walletCurrentAmountLabel">Current amount</string>
    <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
    <string name="walletNameIsRequired">wallet name is required.</string>
    <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>

    <!-- Cashflow list fragment -->
    <string name="cashflowListFromWalletLabel">From: </string>
    <string name="cashflowListToWalletLabel">To: </string>
    <string name="cashflowListCommentLabel">Comment:</string>

    <!-- Cashflow details fragment -->
    <string name="cashFlowFromWalletLabel">From:</string>
    <string name="cashFlowToWalletLabel">To:</string>
    <string name="cashflowAmountLabel">Amount:</string>
    <string name="cashflowAmountHint">amount</string>
    <string name="cashflowCommentLabel">Comment:</string>
    <string name="cashflowCommentHint">comment</string>
    <string name="cashflowCategoryLabel">Category:</string>
    <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
    <string name="cashflowDateLabel">Date:</string>
    <string name="cashflowExtraLabel">Extra:</string>

    <string name="cashFlowFromAndToWalletsNeedToBeDifferent">From and to wallets need to be different.</string>
    <string name="cashFlowDeleteConfirmation">Do you want to delete this cash flow?</string>
    <string name="cashFlowTransferCategoryToast">Transfer has to be assigned to Transfer category</string>

    <!-- Create Profile fragment -->
    <string name="profileLabel">Profile</string>
    <string name="profileCreateLocalLabel">Create local profile</string>
    <string name="profileName">Profile name</string>
    <string name="profileDownloadProfileLabel">Download profile from server</string>

    <!-- Synchronize fragment -->
    <string name="synchronizeLabel">Synchronize</string>

    <string name="title_activity_wallet_details">WalletDetailsActivity</string>

</resources>
