<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/cardPadding">

    <RelativeLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
        style="@style/Card">

        <Switch
            android:id="@+id/recordType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:checked="true"
            android:textOff="@string/income"
            android:textOn="@string/expanse" />

        <TextView
            android:id="@+id/fromWalletLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recordType"
            android:text="@string/cashflowFromWalletLabel"
            android:textSize="@dimen/smallFontSize" />

        <Spinner
            android:id="@+id/fromWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fromWalletLabel"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/toWalletLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fromWallet"
            android:text="@string/cashflowToWalletLabel"
            android:textSize="@dimen/smallFontSize" />

        <Spinner
            android:id="@+id/toWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toWalletLabel"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/amountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toWallet"
            android:text="@string/cashflowAmountLabel"
            android:textSize="@dimen/smallFontSize" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amountLabel"
            android:hint="@string/cashflowAmountHint"
            android:inputType="number|numberDecimal"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/commentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount"
            android:text="@string/cashflowCommentLabel"
            android:textSize="@dimen/smallFontSize" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentLabel"
            android:hint="@string/cashflowCommentHint"
            android:inputType="textAutoCorrect"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment"
            android:text="@string/cashflowCategoryLabel"
            android:textSize="@dimen/smallFontSize" />

        <info.hoang8f.widget.FButton
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/categoryLabel"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/removeCategory"
            android:text="@string/cashflowCategoryHint"
            fbutton:buttonColor="@color/background"
            fbutton:cornerRadius="4dp"
            fbutton:shadowHeight="3dp" />

        <ImageButton
            android:id="@+id/removeCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/category"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/category"
            android:layout_below="@id/categoryLabel"
            android:layout_centerInParent="true"
            android:background="@null"
            android:src="@drawable/ic_remove" />

        <info.hoang8f.widget.FButton
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/category"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/timePicker"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            fbutton:buttonColor="@color/background"
            fbutton:cornerRadius="4dp"
            fbutton:shadowHeight="3dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/category"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_clock"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            fbutton:buttonColor="@color/background"
            fbutton:cornerRadius="4dp"
            fbutton:shadowHeight="3dp" />

    </RelativeLayout>
</ScrollView>
