<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/cardMargin">

    <android.support.v7.widget.CardView android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardContentPadding">

            <TextView android:id="@+id/walletLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cashFlowWalletLabel"
                    android:textSize="@dimen/smallFontSize"/>

            <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <Spinner android:id="@+id/wallet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:spinnerMode="dropdown"/>

                <info.hoang8f.widget.FButton android:id="@+id/typeToggle"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/smallFontSize"
                        fbutton:cornerRadius="2dp"
                        fbutton:shadowHeight="2dp"/>
            </LinearLayout>

            <TextView android:id="@+id/tagLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cashflowTagLabel"
                    android:textSize="@dimen/smallFontSize"/>

            <MultiAutoCompleteTextView android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView android:id="@+id/amountLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cashflowAmountLabel"
                    android:textSize="@dimen/smallFontSize"
                    android:visibility="invisible"/>

            <EditText android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/cashflowAmountHint"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/mediumFontSize"/>

            <TextView android:id="@+id/commentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cashflowCommentLabel"
                android:textSize="@dimen/smallFontSize"
                android:visibility="invisible"/>

            <EditText android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/cashflowCommentHint"
                android:textSize="@dimen/mediumFontSize"/>

            <TextView android:id="@+id/extraLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cashflowExtraLabel"
                    android:textSize="@dimen/smallFontSize"/>

            <CheckedTextView android:id="@+id/isCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:text="Transaction is completed."
                    android:textSize="@dimen/mediumFontSize"/>

            <TextView android:id="@+id/dateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cashflowDateLabel"
                    android:textSize="@dimen/smallFontSize"/>

            <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <info.hoang8f.widget.FButton android:id="@+id/datePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_calendar"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        fbutton:buttonColor="@color/background"
                        fbutton:cornerRadius="4dp"
                        fbutton:shadowHeight="3dp"/>

                <info.hoang8f.widget.FButton android:id="@+id/timePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:drawableLeft="@drawable/ic_clock"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_clock"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        fbutton:buttonColor="@color/background"
                        fbutton:cornerRadius="4dp"
                        fbutton:shadowHeight="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>